@@ -1,5 +1,6 @@
 Version 2.02.02 - 
 ====================================
+  vgreduce replaces active LVs with error segment before removing them.
   Set block_on_error parameter if available.
   Add target_version.
   Add details to format1 'Invalid LV in extent map' error message.
